# SciFig

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: index.json
.github/workflows/: release.yml  test.yml
.workflow/: config.json  project-tech.json  project.md  state.json
.workflow/codebase/: architecture.md  concerns.md  context.md  doc-index.json  features.md  tech-stack.md
.workflow/specs/: architecture-constraints.md  coding-conventions.md  learnings.md
data/: dose_response_experiment.csv  forest_data.csv  line_ci_data.csv  manhattan_data.csv  multi_panel_experiment.csv  qq_data.csv  waterfall_data.csv
doc/: CLAUDE.md  deep-research-report.md
docs/: Makefile  changelog.rst  conf.py  gallery_style_issues.md  index.rst  quickstart.rst
scifig/: __init__.py  palette.py  style.py  utils.py
scripts/: build_gallery_contact_sheets.py  gallery_expansion.py  scifig_revalidate_edited_svg.py  validate_release.sh
scripts/backup/: generate_citi_bike_showcase.py  generate_exoplanet_showcase.py  generate_gtex_sample_quality_showcase.py  generate_nyt_covid_states_showcase.py  generate_uci_power_showcase.py  generate_uci_wine_showcase.py
skills/: README.md
specs/: journal-profiles.md
src/scifig/: __init__.py  api.py  charts.py  cli.py  compose.py  export.py  figure.py  generators_clinical.py  generators_distribution.py  generators_genomics.py  generators_matrix.py  generators_ml.py  generators_scatter.py  (+8 more)
tests/: test_compose.py  test_package_core.py  test_polish.py  test_public_api.py  test_real_data_validation.py  test_stats.py
(+69 files in other folders)
