[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scifig"
version = "0.1.0"
description = "Publication-ready scientific figure generation from experimental data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
]

[project.optional-dependencies]
full = [
    "scikit-learn>=1.3",
    "lifelines>=0.27",
    "umap-learn>=0.5",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/Techd/SciFig"
Repository = "https://github.com/Techd/SciFig"
