[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scifig"
version = "0.1.6"
description = "Publication-ready scientific figure generation from tabular data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Techd" }]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scipy>=1.11",
    "seaborn>=0.13",
    "lifelines>=0.27",
]

[project.scripts]
scifig = "scifig.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scifig = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
